--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Banju</string>
     <string name="action_settings">Settings</string>
+    
+    //Menu
+    <string name="menu_diccionario">Diccionario</string>
+    <string name="menu_redesSociales">Redes Sociales</string>
+    <string name="menu_configuracion">Configuracion</string>
 </resources>
