--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="menu_redesSociales">Redes Sociales</string>
     <string name="menu_configuracion">Configuracion</string>
     <string name="logo_content_description">Banju, tu sistema ideal para tu negocio</string>
-    <string name="btn_ingresaConCorreoTxt">Ingresa con tu correo</string>
+    <string name="btn_ingresaConCorreoTxt">Ingresa con correo</string>
 </resources>
